--- a/welcome.html
+++ b/welcome.html
@@ -15,7 +15,7 @@
    <div class="welcome__container">
      <div class="central central--video">
        <img src="./images/logo2.png" alt="video production logo" class="central__logo">
-     <a href="#" class="button button--color--beige">ВОЙТИ</a>
+     <a href="/" class="button button--color--beige">ВОЙТИ</a>
       </div>
    </div>
 
