--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <div class="container hero__container">
           <header class="header">
             <div class="header__col">
-              <a href="/" class="logo">
+              <a href="./index.html" class="logo">
                 <img src="./images/logo.png" alt="Логотип" class="logo__img">
               </a>
               <nav class="menu">
                 <ul class="menu__list-header">
-                  <li class="menu__item"> <a href="/" class="menu__link">Главная</a></li>
+                  <li class="menu__item"> <a href="./index.html" class="menu__link">Главная</a></li>
                   <li class="menu__item menu__item--active"> <a href="./services.html" class="menu__link">Услуги</a></li>
                   <li class="menu__item"> <a href="./reviews.html" class="menu__link">Отзывы</a></li>
                 </ul>
@@ -217,12 +217,12 @@
       <div class="container footer-container__content">
         <div class="footer">
           <div class="footer__col">
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
               <img src="./images/logo.png" alt="Логотип" class="logo__img">
             </a>
             <nav class="menu">
               <ul class="menu__list">
-                <li class="menu__item"> <a href="/" class="menu__link">Главная</a></li>
+                <li class="menu__item"> <a href="./index.html" class="menu__link">Главная</a></li>
                 <li class="menu__item menu__item--active"> <a href="./services.html" class="menu__link">Услуги</a></li>
                 <li class="menu__item"> <a href="./reviews.html" class="menu__link">Отзывы</a></li>
               </ul>
