--- a/services.html
+++ b/services.html
@@ -18,12 +18,12 @@
       <div class="container top-line__container">
         <header class="header">
           <div class="header__col">
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
               <img src="./images/logo.png" alt="Логотип" class="logo__img">
             </a>
             <nav class="menu">
               <ul class="menu__list-header">
-                <li class="menu__item"> <a href="/" class="menu__link">Главная</a></li>
+                <li class="menu__item"> <a href="./index.html" class="menu__link">Главная</a></li>
                 <li class="menu__item menu__item--active"> <a href="./services.html" class="menu__link">Услуги</a></li>
                 <li class="menu__item"> <a href="./reviews.html" class="menu__link">Отзывы</a></li>
               </ul>
@@ -46,17 +46,13 @@
         <nav class="breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a href="/" class="breadcrumbs__link">Главная</a>
+              <a href="./index.html" class="breadcrumbs__link">Главная</a>
             </li>
             <li class="breadcrumbs__item breadcrumbs__item--active">
               <a href="./services.html" class="breadcrumbs__link">Услуги</a>
             </li>
-
-
           </ul>
         </nav>
-
-
       </div>
     </section>
     <main class="page-content">
@@ -171,12 +167,12 @@
       <div class="container inner-footer__container">
         <div class="footer footer-container__section">
           <div class="footer__col">
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
               <img src="./images/logo.png" alt="Логотип" class="logo__img">
             </a>
             <nav class="menu">
               <ul class="menu__list-footer">
-                <li class="menu__item"> <a href="/" class="menu__link">Главная</a></li>
+                <li class="menu__item"> <a href="./index.html" class="menu__link">Главная</a></li>
                 <li class="menu__item menu__item--active"> <a href="./services.html" class="menu__link">Услуги</a></li>
                 <li class="menu__item"> <a href="./reviews.html" class="menu__link">Отзывы</a></li>
               </ul>
