--- a/reviews.html
+++ b/reviews.html
@@ -90,7 +90,7 @@
               <div class="review__userdata">
                 <a href="#" class="review__user">Лиза Сидорова</a>
                 <ul class="review__tags">
-                  <li class="review__tags-item tag">Съемка свадьбы</li>
+                  <li class="review__tags-item tag tag--bg--orange">Съемка свадьбы</li>
                 </ul>
               </div>
             </div>
@@ -116,7 +116,7 @@
               <div class="review__userdata">
                 <a href="#" class="review__user">Екатерина Жмых</a>
                 <ul class="review__tags">
-                  <li class="review__tags-item tag">Студийная съемка</li>
+                  <li class="review__tags-item tag tag--bg--orange">Студийная съемка</li>
                 </ul>
               </div>
             </div>
@@ -142,7 +142,7 @@
               <div class="review__userdata">
                 <a href="#" class="review__user">Антон Игоревич</a>
                 <ul class="review__tags">
-                  <li class="review__tags-item tag">Реклама</li>
+                  <li class="review__tags-item tag tag--bg--orange">Реклама</li>
                 </ul>
               </div>
             </div>
