--- a/reviews.html
+++ b/reviews.html
@@ -30,13 +30,15 @@
           <div class="header__col header__col--align--right">
             <address class="contacts__header">
               <a href="tel:+78007003030" class="contacts__header-phone">8 800 700 30 30</a>
-              <div class="contacts__header-dropdown-title">График работы</div>
-              <div class="dropdown__menu">
-                <ul class="dropdown__list">
-                  <li class="dropdown__item"><b>пн-вс: 09:00-20:00</b></li>
-                  <li class="dropdown__item">Обед: 14:00-14:30</li>
-                </ul>
-              </div>
+               <div class="dropdown">
+                  <a href="#" class="contacts__header-dropdown-title--active">График работы</a>
+                  <div class="dropdown__menu">
+                    <ul class="dropdown__list">
+                      <li class="dropdown__item"><b>пн-вс: 09:00-20:00</b></li>
+                      <li class="dropdown__item">Обед: 14:00-14:30</li>
+                    </ul>
+                  </div>
+                </div>
             </address>
           </div>
         </header>
